--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-
 spring.application.name=neuro_learn
 spring.config.import=classpath:application-secrets.properties
 server.port=8081
+# spring.datasource.url=jdbc:mysql://host.docker.internal:3306/neuro_learn 
 spring.datasource.url=jdbc:mysql://localhost:3306/neuro_learn
-spring.datasource.username=root
-spring.datasource.password=tanisha1709
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
